@@ -10,7 +10,7 @@ my $builder = Padre::PluginBuilder->new(
     dist_author         => 'Gabor Szabo <szabgab@gmail.com>',
     dist_version_from   => 'lib/Padre/Plugin/CommandLine.pm',
     requires => {
-		'Padre'             => '0.17',
+		'Padre'             => '0.43',
 		'Wx::Perl::Dialog'  => '0.03',
     },
     build_requires => {
