@@ -9,6 +9,8 @@ Revision history for Padre-Plugin-CommandLine
 	- Arabic translation (azawawi)
 	- Spanish (brunov)
     removed taint mode for tests, leading to build failures (jquelin)
+    compatibility with new Padre for plugin menu (CHORNY)
+    compatibility with latest Padre (CHORNY)
 
 0.02    2008.12.23
         Add prereq Wx::Perl::Dialog
